# OpenLEMS

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  arch.md  architecture_design.md  build_armv7l.sh  docker_run.sh  generate_all.sh  generate_all_plugin.sh  go-work-update.sh  go.sum  go.work  go.work.sum  统一点位管理系统设计方案.md
@cpp/: .gitignore  CMakeLists.txt  Makefile  PROJECT_STRUCTURE.md  README.md  build.bat  example_usage.go  go.mod  run_example.sh
@cpp/bindings/: cforgo.yml  gen.bat  gen.ps1  gen.sh
@cpp/hexlib/: Makefile  go.mod  hexlib.go  hexlib_test.go
@cpp/hexlib/src/: hexlib.cpp  mpc_kalman.cpp
@cpp/hexlib/src/include/: hexlib.h
@cpp/src/: hexlib.cpp  mpc_kalman.cpp
application/: README.md  go.mod  go.sum  llms.txt  main.go
application-gui/: go.mod  main.go
arm-build/: device.yaml  sync.sh
common/: COMMON_FILES_SUMMARY.md  c_alarm_manager_si.go  c_common_version_c.go  c_device_manager_si.go  c_manager_i.go  c_policy_manager_si.go  c_price_manager_si.go  c_storage_manager_if.go  c_storage_s.go  driver_config_serv_sf.go  export.go  export_common_config.go  export_common_config_service.go  export_common_device_meta_f.go  export_common_push.go  export_common_storage.go  export_config.go  export_device_meta_f.go  export_storage.go  export_value.go  go.mod  go.sum  serv_device_cmd_si.go  serv_driver_config_sf.go
common_cabinet/: export_function.go  export_struct.go  go.mod
common_group/: export_function.go  export_struct.go  go.mod
common_station/: export_function.go  export_struct.go  go.mod
(+1908 files in other folders)
